--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+
+	<div class="root">
 	<p class="notice">
 		Notice: this page and product is not comercial. They were created in order to practice and learn how to create web-sites and applications. This is student project.
 	</p>
@@ -58,6 +60,6 @@
 
 	<h3>Writeboards</h3></td>
 	<p>This is a concept of a white board where everyone can add and remove something previously written. The visibility also can be managed as well as comments. New page has title and the body.</p>
-
+	</div>
 </body>
 </html>
