--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
                   <div class="form-group">
-                      <label for="name">Name</label>
+                      <label >Name</label>
                       <input type="text" class="form-control" id="contact-name" placeholder="Enter Your Name">
                   </div>
                   <div class="form-group">
