--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
 
     <footer class="footer" >
       <div class="container">
+        <row>
         
-          <ul class="web-info inline">
+         <!-- <ul class="web-info inline">
             <li>
               <p class="git">Visit us on <a href="https://github.com/TobiaszK" target="blank">GitHub</a></p>
             </li>
@@ -234,12 +235,21 @@
             <li class="rights">
               <p class="copyrights">© 2013 Tobiasz Kukawka BookCorp</p>
             </li>
-          </ul>
+          </ul>-->
+
+        <div class="git col-xs-6 col-sm-4 col-md-4">
+           <p class="git">Visit us on <a href="https://github.com/TobiaszK" target="blank">GitHub</a></p>
+        </div>
+
+        <div class="mail col-xs-6 col-sm-4 col-md-4">
+          <p class="">Contact us by <a href="mailto:tobiasz.kukawka@ymail.com">e-mail</a> !</p>
+        </div>
+
+        <div class="rights col-xs-6 col-sm-4 col-md-4">
+              <p class="copyrights">© 2013 Tobiasz Kukawka BookCorp</p>
+        </div>
+      </row>
       </div>
-
-      
-
-
 
      </footer> 
     <!-- Bootstrap core JavaScript
